--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
+    android:background="@mipmap/bg"
     android:orientation="vertical">
 
     <Button
         android:id="@+id/button_add_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
         android:text="Add New Address"
+        android:background="@drawable/button_selector"
         android:layout_margin="15dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
