--- a/app/src/main/res/layout/activity_order_confirmation.xml
+++ b/app/src/main/res/layout/activity_order_confirmation.xml
@@ -2,15 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/bg">
+    android:background="@mipmap/bg"
+    android:orientation="vertical">
 
+
+
+
+    <ImageView
+        android:id="@+id/joy"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/pic2"
+        android:padding="5dp"
+         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="20dp"
         android:text="Thanks, your order is been placed successfully"
-        android:textSize="30dp"
-        android:layout_margin="20dp"/>
+        android:textSize="30dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,11 +32,22 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/button_back_category"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Payment"
-            android:background="@android:color/white"/>
+            android:layout_margin="7.5dp"
+            android:background="@drawable/button_selector"
+            android:text="Back to Category" />
+
+        <Button
+            android:id="@+id/button_logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="7.5dp"
+            android:background="@drawable/button_selector"
+            android:text="Logout" />
 
     </LinearLayout>
 
