--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -2,31 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/bg">
+    android:background="@mipmap/bg"
+    android:orientation="vertical">
 
     <CheckBox
         android:id="@+id/check_box_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cash on Delivery"
-        android:textSize="20dp"
         android:layout_margin="30dp"
-        />
+        android:text="Cash on Delivery"
+        android:textSize="20dp" />
 
 
     <CheckBox
         android:id="@+id/check_box_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Online"
-        android:textSize="20dp"
         android:layout_margin="30dp"
-        />
+        android:text="Pay Online"
+        android:textSize="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="15dp"
         android:gravity="bottom"
         android:orientation="vertical">
 
@@ -35,8 +34,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Payment"
-            android:background="@android:color/white"/>
+            android:background="@drawable/button_selector"
+            android:text="Payment" />
 
     </LinearLayout>
 
