--- a/app/src/main/res/layout/new_row_address.xml
+++ b/app/src/main/res/layout/new_row_address.xml
@@ -1,44 +1,66 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recycler_view_address_row"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:id="@+id/recycler_view_address_row">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/text_view_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="35dp" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="15dp"
+        android:textSize="25dp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/text_view_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="35dp" />
+        android:layout_marginLeft="10dp"
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/text_view_3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="35dp" />
+        android:layout_marginLeft="10dp"
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/text_view_4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="35dp" />
+        android:layout_marginLeft="10dp"
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/text_view_5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="35dp" />
+        android:layout_marginLeft="10dp"
+        android:textSize="20dp" />
 
-    <View
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/black"
-        />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="Edit"
+            android:background="@drawable/button_selector"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="Delete"
+            android:background="@drawable/button_selector"/>
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
