add splash screen

--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -5,6 +5,8 @@
     android:background="@mipmap/bg"
     android:orientation="vertical">
 
+<include layout="@layout/app_bar"/>
+
     <Button
         android:id="@+id/button_add_address"
         android:layout_width="match_parent"
