--- a/app/src/main/res/layout/activity_add_address.xml
+++ b/app/src/main/res/layout/activity_add_address.xml
@@ -5,7 +5,7 @@
     android:background="@mipmap/bg"
     android:orientation="vertical">
 
-
+<include layout="@layout/app_bar"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
