--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -1,43 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/bg"
     android:orientation="vertical">
-
-    <CheckBox
-        android:id="@+id/check_box_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:text="Cash on Delivery"
-        android:textSize="20dp" />
-
-
-    <CheckBox
-        android:id="@+id/check_box_2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:text="Pay Online"
-        android:textSize="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="15dp"
-        android:gravity="bottom"
+        android:background="@mipmap/bg"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/button_payment"
+        <include layout="@layout/app_bar" />
+
+        <CheckBox
+            android:id="@+id/check_box_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/button_selector"
-            android:text="Payment" />
+            android:layout_margin="30dp"
+            android:text="Cash on Delivery"
+            android:textSize="20dp" />
+
+
+        <CheckBox
+            android:id="@+id/check_box_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            android:text="Pay Online"
+            android:textSize="20dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="15dp"
+            android:gravity="bottom"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/button_payment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/button_selector"
+                android:text="Payment" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
+<!--    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
+<!--        android:id="@+id/button_payment"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="bottom"-->
+<!--        android:layout_margin="15dp"-->
+<!--        android:background="@drawable/button_selector"-->
+<!--        android:text="Payment"-->
+<!--         />-->
 
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
