--- a/app/src/main/res/layout/new_row_address.xml
+++ b/app/src/main/res/layout/new_row_address.xml
@@ -46,6 +46,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
+            android:id="@+id/button_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -53,6 +54,7 @@
             android:background="@drawable/button_selector"/>
 
         <Button
+            android:id="@+id/button_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
