--- a/app/src/main/res/layout/new_row_fragment.xml
+++ b/app/src/main/res/layout/new_row_fragment.xml
@@ -3,28 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="#C8DBEB"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="5dp"
-        app:cardMaxElevation="10dp"
-        app:cardPreventCornerOverlap="true"
-        android:id="@+id/card_view_1">
 
-        <ImageView
-            android:id="@+id/image_view_1"
-            android:layout_width="100dp"
-            android:layout_height="100dp" />
-    </androidx.cardview.widget.CardView>
-
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/image_view_1"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_margin="5dp" />
 
 
     <TextView
@@ -33,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="15dp"
-        android:layout_toRightOf="@+id/card_view_1"
+        android:layout_toRightOf="@+id/image_view_1"
         android:textSize="20dp"
         android:textStyle="bold" />
 
@@ -44,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_view_1"
         android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/card_view_1"
+        android:layout_toRightOf="@+id/image_view_1"
         android:textSize="15dp"
         android:textStyle="italic" />
 
@@ -55,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_view_2"
         android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/card_view_1"
+        android:layout_toRightOf="@+id/image_view_1"
         android:textSize="20dp"
         android:textStyle="bold" />
 
