--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -10,8 +10,8 @@
         android:title="My orders"/>
 
     <item
-        android:id="@+id/item_category"
-        android:title="My category"/>
+        android:id="@+id/item_logout"
+        android:title="Logout"/>
 
 
 
