--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -36,6 +36,170 @@
             android:layout_margin="15dp"
             android:gravity="bottom"
             android:orientation="vertical">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="350dp">
+
+                <LinearLayout
+                    android:id="@+id/linear_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginRight="20dp"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:weightSum="20">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_weight="5"
+                        android:text="name"
+                        android:textColor="@android:color/black"
+                        android:textSize="17sp" />
+
+
+                    <EditText
+                        android:id="@+id/edit_text_1"
+                        android:layout_width="0dp"
+                        android:layout_height="45dp"
+                        android:layout_margin="10dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_weight="15"
+                        android:background="@drawable/edittext_selector"
+                        android:hint="name"
+                        android:minHeight="40dp"
+                        android:paddingLeft="30dp"
+                        android:singleLine="true"
+                        android:textColorHint="#95A1AA" />
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/linear_11"
+                    android:layout_below="@+id/linear_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginRight="20dp"
+                    android:gravity="center_vertical"
+                    android:weightSum="20"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_weight="5"
+                        android:text="mobile"
+                        android:textColor="@android:color/black"
+                        android:textSize="17sp" />
+
+                    <EditText
+                        android:id="@+id/edit_text_2"
+                        android:layout_width="0dp"
+                        android:layout_height="45dp"
+                        android:layout_margin="10dp"
+                        android:layout_weight="15"
+                        android:background="@drawable/edittext_selector"
+                        android:hint="mobile number"
+                        android:minHeight="40dp"
+                        android:paddingLeft="30dp"
+                        android:singleLine="true"
+                        android:textColorHint="#95A1AA" />
+
+
+                </LinearLayout>
+                <Button
+                    android:id="@+id/button_save"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="130dp"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/button_selector"
+                    android:text="save"/>
+
+
+
+                <LinearLayout
+                    android:id="@+id/linear_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginRight="20dp"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:weightSum="20">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_weight="5"
+                        android:text="name"
+                        android:textColor="@android:color/black"
+                        android:textSize="17sp" />
+
+
+                    <TextView
+                        android:id="@+id/text_view_1"
+                        android:layout_width="0dp"
+                        android:layout_height="45dp"
+                        android:layout_margin="20dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_weight="15"
+                        android:minHeight="40dp"
+                        android:paddingLeft="30dp"
+                        android:singleLine="true"
+                        android:textColorHint="#95A1AA" />
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/linear_22"
+                    android:layout_below="@+id/linear_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginRight="20dp"
+                    android:gravity="center_vertical"
+                    android:weightSum="20"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_weight="5"
+                        android:text="mobile"
+                        android:textColor="@android:color/black"
+                        android:textSize="17sp" />
+
+                    <TextView
+                        android:id="@+id/text_view_2"
+                        android:layout_width="0dp"
+                        android:layout_height="45dp"
+                        android:layout_margin="20dp"
+                        android:layout_weight="15"
+                        android:minHeight="40dp"
+                        android:paddingLeft="30dp"
+                        android:singleLine="true"
+                        android:textColorHint="#95A1AA" />
+
+
+                </LinearLayout>
+                <Button
+                    android:id="@+id/button_alter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="130dp"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/button_selector"
+                    android:text="alter"/>
+
+
+            </RelativeLayout>
 
             <Button
                 android:id="@+id/button_payment"
